# aoc

./: .gitignore
2023/: CMakeLists.txt  README.md
2023/src/: main.cpp  main.hpp
2023/src/day1/: day1.cpp  day1.hpp
2023/src/day2/: day2.cpp  day2.hpp
2023/src/terminal/: terminal.cpp  terminal.hpp
